# delugian

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: Deluge-LED.eot
src/components/Config/: Config.tsx  ConfigHeader.tsx  index.ts
src/components/Keyboard/: Keyboard.tsx
src/components/Main/: MainDisplay.tsx  index.ts
src/components/MainProvider/: MainProvider.tsx  index.ts
src/components/ScreenManager/: ScreenManager.tsx
src/components/SettingsSidebar/: SettingRow.tsx  SettingsSidebar.tsx
src/i18n/br/: translation.ts
src/i18n/de/: translation.ts
src/i18n/en/: translation.ts
src/i18n/fr/: translation.ts
src/i18n/ja/: translation.ts
src/i18n/zh/: translation.ts
src/utils/: constants.ts  helpers.ts  index.ts
src/utils/modes/: practice.ts
